syntax = "proto3";

package protos;

option go_package = "apis_grpc/protos"; // {module_name}/{folder_structure}

message GreetRequest{
    string first_name = 1;
}

message GreetResponse{
    string result = 1;
}