syntax = "proto3";

package protos;

option go_package = "apis_grpc/protos"; // {module_name}/{folder_structure}

import "protos/greetings_message.proto";

service GreetService{
    rpc Greet(GreetRequest) returns (GreetResponse);
    rpc GreetWithDeadline(GreetRequest) returns (GreetResponse); // on server side, it waits for few seconds before responding to client
    rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse);
}